// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIAccordion /> | Accordion Wrapper should render open, and not pop 1`] = `
<div
  className="xui-accordionwrapper xui-accordionwrapper-is-open xui-accordionwrapper-no-pop"
>
  <div>
    John Smith
  </div>
  <div
    className="xui-accordionwrapper--content xui-accordionwrapper--content-is-open"
  >
    <div>
      Accountant
    </div>
  </div>
</div>
`;

exports[`<XUIAccordion /> | Accordion Wrapper should render open, and pop 1`] = `
<div
  className="xui-accordionwrapper xui-accordionwrapper-is-open xui-accordionwrapper-pop"
>
  <div>
    John Smith
  </div>
  <div
    className="xui-accordionwrapper--content xui-accordionwrapper--content-is-open"
  >
    <div>
      Accountant
    </div>
  </div>
</div>
`;
